--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
+  "name": "api-imoveis",
+  "version": "1.0.0",
+  "main": "server.ts",
   "scripts": {
-    "test": "jest --verbose --runInBand"
+    "test": "jest --verbose --runInBand",
+    "dev": "ts-node-dev --ignore-watch node_modules --rs --cls src/server.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
+    "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.10"
+    "ts-node-dev": "^2.0.0",
+    "typeorm": "^0.3.10",
+    "zod": "^3.21.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^28.1.8",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/supertest": "^2.0.12",
